--- a/pages/catering.html
+++ b/pages/catering.html
@@ -7,14 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/AnStyle.css">
+    <link rel="stylesheet" href="../css/AnStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../Fonts/Montauk-Regular.otf">
-    <link rel="stylesheet" href="../Fonts/Montauk-Italic.otf">
-    <link rel="stylesheet" href="../Fonts/Montauk-Light.otf">
-    <link rel="stylesheet" href="../Fonts/Montauk-Bold.otf">
 
     <title>Catering</title>
   </head>
@@ -28,7 +24,7 @@
                   <div class="col-12 mb-4">
                       <nav class="navbar navbar-expand-lg navbar-light ContainerFluidBg">
                           <a class="navbar-brand" href="#">
-                              <img class="mx-5" src="./images/MuzzlesLogo.png"
+                              <img class="mx-5" src="../images/MuzzlesLogo.png"
                                   alt="Image of Muzzle's logo.">
                           </a>
                           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -62,7 +58,7 @@
           <div class="d-xxl-none d-xl-none d-xxl-block d-lg-none d-xl-block">
               <nav class="navbar navbar-expand-lg navbar-light ContainerFluidBg mb-4">
                   <a class="navbar-brand" href="#">
-                      <img class="mx-5" src="./images/MuzzlesLogo.png" alt="Image of Muzzle's logo.">
+                      <img class="mx-5" src="../images/MuzzlesLogo.png" alt="Image of Muzzle's logo.">
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                       data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -91,13 +87,13 @@
 
               <div class="row heroBottom">
                   <div class="col-sm-12">
-                        <img class="img-fluid" src="./images/cateringHero.jpg" alt="Picture of Catering Food">
+                        <img class="img-fluid" src="../images/cateringHero.jpg" alt="Picture of Catering Food">
                   </div>
               </div><!--CATERING HERO IMG-->
               
               <div class="row aboutCateringBottom">
                 <div class="col-sm-12 col-lg-5 d-flex justify-content-sm-center">
-                  <img class="img-fluid" src="./images/cateringMaine.jpg" alt="">
+                  <img class="img-fluid" src="../images/cateringMaine.jpg" alt="">
                 </div>
                 <div class="col-sm-12 col-lg-7 mt-sm-3 mt-lg-0 aboutCatering">
                   <div class="container">
@@ -112,13 +108,13 @@
 
               <div class="row cateringImagesBotoom">
                 <div class="col-sm-12 col-lg-4 d-flex justify-content-sm-center">
-                  <img class="img-fluid" src="./images/catering1.jpg" alt="">
+                  <img class="img-fluid" src="../images/catering1.jpg" alt="">
                 </div>
                 <div class="col-sm-12 col-lg-4 d-flex justify-content-sm-center mt-sm-3 mt-lg-0">
-                  <img class="img-fluid" src="./images/catering2.jpg" alt="">
+                  <img class="img-fluid" src="../images/catering2.jpg" alt="">
                 </div>
                 <div class="col-sm-12 col-lg-4 d-flex justify-content-sm-center mt-sm-3 mt-lg-0">
-                  <img class="img-fluid" src="./images/catering3.jpg" alt="">
+                  <img class="img-fluid" src="../images/catering3.jpg" alt="">
                 </div>
               </div><!--3 PHOTOS COLLAGE-->
 
@@ -139,7 +135,7 @@
                       <div class="col-sm-6">
                         <div class="row">
                           <div class="col-sm-12 d-flex justify-content-end d-flex justify-content-sm-center justify-content-lg-end">
-                            <img src="./images/CompanyLogo.png" alt="" width="100px" height="31.6px">
+                            <img src="../images/CompanyLogo.png" alt="" width="100px" height="31.6px">
                           </div>
                         </div>
                         <div class="row">
