--- a/pages/photos.html
+++ b/pages/photos.html
@@ -7,14 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/AnStyle.css">
+    <link rel="stylesheet" href="../css/AnStyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../Fonts/Montauk-Regular.otf">
-    <link rel="stylesheet" href="../Fonts/Montauk-Italic.otf">
-    <link rel="stylesheet" href="../Fonts/Montauk-Light.otf">
-    <link rel="stylesheet" href="../Fonts/Montauk-Bold.otf">
 
     <title>Photos</title>
   </head>
@@ -28,7 +24,7 @@
                     <div class="col-12 mb-4">
                         <nav class="navbar navbar-expand-lg navbar-light ContainerFluidBg">
                             <a class="navbar-brand" href="#">
-                                <img class="mx-5" src="./images/MuzzlesLogo.png"
+                                <img class="mx-5" src="../images/MuzzlesLogo.png"
                                     alt="Image of Muzzle's logo.">
                             </a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -62,7 +58,7 @@
             <div class="d-xxl-none d-xl-none d-xxl-block d-lg-none d-xl-block">
                 <nav class="navbar navbar-expand-lg navbar-light ContainerFluidBg mb-4">
                     <a class="navbar-brand" href="#">
-                        <img class="mx-5" src="./images/MuzzlesLogo.png" alt="Image of Muzzle's logo.">
+                        <img class="mx-5" src="../images/MuzzlesLogo.png" alt="Image of Muzzle's logo.">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -89,44 +85,44 @@
             <div>
                 <div class="row mb-2">
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo01.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo01.jpg" alt="">
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo02.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo02.jpg" alt="">
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo03.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo03.jpg" alt="">
                     </div>  
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding noRightPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo04.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo04.jpg" alt="">
                     </div>
                 </div>
                 <div class="row mb-2">
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo05.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo05.jpg" alt="">
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo06.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo06.jpg" alt="">
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo07.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo07.jpg" alt="">
                     </div>  
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding noRightPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo08.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo08.jpg" alt="">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo09.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo09.jpg" alt="">
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo10.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo10.jpg" alt="">
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo11.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo11.jpg" alt="">
                     </div>  
                     <div class="col-sm-12 col-md-6 col-lg-3 mt-sm-2 mt-lg-0 noLeftPadding noRightPadding d-flex justify-content-sm-center">
-                        <img class="img-fluid imgborder"src="./images/photo12.jpg" alt="">
+                        <img class="img-fluid imgborder"src="../images/photo12.jpg" alt="">
                     </div>
                 </div>
 
@@ -148,7 +144,7 @@
                   <div class="col-sm-6">
                     <div class="row">
                       <div class="col-sm-12 d-flex justify-content-end d-flex justify-content-sm-center justify-content-lg-end">
-                        <img src="./images/CompanyLogo.png" alt="" width="100px" height="31.6px">
+                        <img src="../images/CompanyLogo.png" alt="" width="100px" height="31.6px">
                       </div>
                     </div>
                     <div class="row">
